--- a/hello-helm/mychart/templates/configmap.yaml
+++ b/hello-helm/mychart/templates/configmap.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Release.Name }}-configmap
+  labels:
+    {{- include "mychart.selectorLabels" . | nindent 4 }}
 data:
   myvalue: "Hello World"
   favoriteDrink: {{ .Values.favoriteDrink }}
