--- a/hello-helm/mychart/templates/configmap.yaml
+++ b/hello-helm/mychart/templates/configmap.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: {{ .Release.Name }}-configmap
   labels:
-    {{- include "mychart.selectorLabels" . | nindent 4 }}
+    {{ include "mychart.selectorLabels" . | nindent 4 }}
 data:
   myvalue: "Hello World"
   favoriteDrink: {{ .Values.favoriteDrink }}
